--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/splashLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#12202f"
+    android:background="@color/colorPrimary"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".SplashScreen">
