--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -5,10 +5,19 @@
     android:id="@+id/gameLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#12202f"
+    android:background="@color/colorPrimary"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/scoreLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/cousine_bold"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -75,4 +84,16 @@
                 app:srcCompat="@drawable/blue" />
         </LinearLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/startButton"
+        style="@android:style/Widget.Holo.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/cousine_bold"
+        android:text="@string/start"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
+
 </LinearLayout>
