--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,13 @@
 
     <Button
         android:id="@+id/playSwap"
-        style="@android:style/Widget.Holo.Button.Borderless"
+        style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:ellipsize="none"
+        android:fontFamily="@font/electrolize"
         android:text="@string/playButton"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
@@ -26,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:fontFamily="@font/electrolize"
         android:text="Button"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
@@ -36,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:fontFamily="@font/electrolize"
         android:text="Button"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
@@ -46,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:fontFamily="@font/electrolize"
         android:text="Button"
         android:textColor="@android:color/white"
         android:textSize="30sp" />
