--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,11 @@
 <resources>
     <color name="colorPrimary">#12202f</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorSecondary">#471010</color>
     <color name="colorAccent">#28E0CB</color>
+    <color name="green">#00CA6A</color>
+    <color name="blue">#00ACD1</color>
+    <color name="red">#EB5769</color>
+    <color name="yellow">#F8E87F</color>
+
 </resources>
