--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,49 +10,62 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/playSwap"
-        style="@android:style/Widget.Holo.Button"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:ellipsize="none"
-        android:fontFamily="@font/electrolize"
-        android:text="@string/playButton"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingStart="70dp"
+        android:paddingEnd="70dp">
 
-    <Button
-        android:id="@+id/button2"
-        style="@android:style/Widget.Holo.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:fontFamily="@font/electrolize"
-        android:text="Button"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        <Button
+            android:id="@+id/playMenuButton"
+            style="@android:style/Widget.Holo.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:backgroundTint="@color/green"
+            android:ellipsize="none"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/playButton"
+            android:textColor="@android:color/white"
+            android:textSize="36sp" />
 
-    <Button
-        android:id="@+id/button3"
-        style="@android:style/Widget.Holo.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:fontFamily="@font/electrolize"
-        android:text="Button"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        <Button
+            android:id="@+id/howToPlayMenuButton"
+            style="@android:style/Widget.Holo.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:backgroundTint="@color/red"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/howToPlayButton"
+            android:textColor="@android:color/white"
+            android:textSize="36sp" />
 
-    <Button
-        android:id="@+id/button4"
-        style="@android:style/Widget.Holo.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:fontFamily="@font/electrolize"
-        android:text="Button"
-        android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        <Button
+            android:id="@+id/highScoresMenuButton"
+            style="@android:style/Widget.Holo.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:backgroundTint="@color/yellow"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/highScoresButton"
+            android:textColor="@android:color/white"
+            android:textSize="36sp" />
+
+        <Button
+            android:id="@+id/aboutButton"
+            style="@android:style/Widget.Holo.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:backgroundTint="@color/blue"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/aboutButton"
+            android:textColor="@android:color/white"
+            android:textSize="36sp" />
+    </LinearLayout>
+
 </LinearLayout>
