--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#12202f</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorSecondary">#471010</color>
-    <color name="colorAccent">#28E0CB</color>
+    <color name="colorAccent">#212F3E</color>
     <color name="green">#00CA6A</color>
     <color name="blue">#00ACD1</color>
     <color name="red">#EB5769</color>
