--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -6,34 +6,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:gravity="left|center_vertical"
+    android:gravity="start|center_vertical"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/backArrow"
+        android:id="@+id/backButton"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="25dp"
-        android:background="@android:drawable/ic_media_play"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
         android:backgroundTint="@color/colorAccent"
-        android:rotation="180" />
+        android:fontFamily="@font/electrolize"
+        android:text="@string/back"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingTop="75dp">
 
         <TextView
             android:id="@+id/scoreLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/score"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/pointsLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
             android:fontFamily="@font/electrolize"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -51,6 +70,7 @@
                     android:id="@+id/greenButton"
                     android:layout_width="125dip"
                     android:layout_height="125dip"
+                    android:visibility="visible"
                     app:srcCompat="@drawable/green" />
             </LinearLayout>
 
@@ -102,17 +122,67 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/startButton"
-            style="@android:style/Widget.Holo.Button.Borderless"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:fontFamily="@font/electrolize"
-            android:text="@string/start"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="35dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/easyButton"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="0"
+                android:backgroundTint="@color/colorAccent"
+                android:fontFamily="@font/electrolize"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:text="@string/easy"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/startButton"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="@color/colorAccent"
+                android:fontFamily="@font/electrolize"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:text="@string/start"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/hardButton"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="0"
+                android:backgroundTint="@color/colorAccent"
+                android:fontFamily="@font/electrolize"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:text="@string/hard"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
