--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -71,7 +71,8 @@
                     android:layout_width="125dip"
                     android:layout_height="125dip"
                     android:visibility="visible"
-                    app:srcCompat="@drawable/green" />
+                    app:srcCompat="@drawable/green"/>
+
             </LinearLayout>
 
             <LinearLayout
@@ -123,9 +124,13 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/coloredLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="35dp"
+            android:layout_marginEnd="25dp"
+            android:background="@android:color/transparent"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -146,6 +151,17 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/numberTip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="0"
+                android:fontFamily="@font/electrolize"
+                android:textAlignment="center"
+                android:textSize="36sp"
+                tools:visibility="gone" />
 
             <Button
                 android:id="@+id/startButton"
