--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -4,7 +4,6 @@
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="4000"
-        android:interpolator="@android:anim/overshoot_interpolator"
-        />
+        android:duration="300"
+        android:interpolator="@android:anim/overshoot_interpolator" />
 </set>
