--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             android:textSize="36sp" />
 
         <Button
-            android:id="@+id/aboutButton"
+            android:id="@+id/aboutMenuButton"
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
