--- a/app/src/main/res/layout/activity_how_to_play_screen.xml
+++ b/app/src/main/res/layout/activity_how_to_play_screen.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimary"
     android:gravity="start"
     android:orientation="vertical"
-    tools:context=".HowToPlay">
+    tools:context=".HowToPlayScreen">
 
     <Button
         android:id="@+id/backHButton"
