--- a/app/src/main/res/layout/activity_about_screen.xml
+++ b/app/src/main/res/layout/activity_about_screen.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="25dp"
         android:backgroundTint="@color/colorAccent"
         android:fontFamily="@font/electrolize"
         android:text="@string/back"
@@ -34,6 +34,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
             android:fontFamily="@font/electrolize"
             android:text="@string/aboutButton"
             android:textAlignment="center"
@@ -41,5 +42,19 @@
             android:textSize="40sp"
             android:textStyle="bold"
             android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:paddingBottom="50dp">
+
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars[2]" />
     </LinearLayout>
 </LinearLayout>
