--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -39,6 +39,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/electrolize"
             android:text="@string/score"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -70,8 +71,9 @@
                     android:id="@+id/greenButton"
                     android:layout_width="125dip"
                     android:layout_height="125dip"
+                    android:contentDescription="@string/greenButton"
                     android:visibility="visible"
-                    app:srcCompat="@drawable/green"/>
+                    app:srcCompat="@drawable/green" />
 
             </LinearLayout>
 
@@ -85,6 +87,7 @@
                     android:id="@+id/redButton"
                     android:layout_width="125dip"
                     android:layout_height="125dip"
+                    android:contentDescription="@string/redButton"
                     app:srcCompat="@drawable/red" />
             </LinearLayout>
         </LinearLayout>
@@ -105,6 +108,7 @@
                     android:id="@+id/yellowButton"
                     android:layout_width="125dip"
                     android:layout_height="125dip"
+                    android:contentDescription="@string/yellowButton"
                     app:srcCompat="@drawable/yellow" />
             </LinearLayout>
 
@@ -118,6 +122,7 @@
                     android:id="@+id/blueButton"
                     android:layout_width="125dip"
                     android:layout_height="125dip"
+                    android:contentDescription="@string/blueButton"
                     app:srcCompat="@drawable/blue" />
             </LinearLayout>
 
