--- a/app/src/main/res/layout/activity_how_to_play_screen.xml
+++ b/app/src/main/res/layout/activity_how_to_play_screen.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="25dp"
         android:backgroundTint="@color/colorAccent"
         android:fontFamily="@font/electrolize"
         android:text="@string/back"
@@ -34,6 +34,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
             android:fontFamily="@font/electrolize"
             android:text="@string/howToPlayButton"
             android:textAlignment="center"
