--- a/app/src/main/res/layout/activity_about_screen.xml
+++ b/app/src/main/res/layout/activity_about_screen.xml
@@ -60,7 +60,31 @@
             android:text="@string/retrofit"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/name"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/electrolize"
+            android:text="@string/school"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -69,5 +93,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars[2]" />
+
     </LinearLayout>
 </LinearLayout>
